--- a/index.html
+++ b/index.html
@@ -5,8 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Money Account</title>
-</head>
-<body>
+
+    <!-- Bootstrap Stylesheet  -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     
+    <!-- Custom Stylesheet  -->
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <!-- header area  -->
+    <header>
+        <h2 class="money py-4 mt-0 text-center text-success fw-bold">Money Account</h2>
+    </header>
+    
+    <main>
+      <!-- main area  -->
+      <div class="container pb-5">
+        <div class="row gx-5">
+          <div class="col-12 col-lg-7 bg-success p-2 text-dark bg-opacity-10 py-5">
+           <div class="pt-4 border bg-light"><img src="image/jar and moneystacks.jpg" class="rounded mx-auto d-block" alt="...">
+          </div>
+          </div>
+          <div class="col-12 col-lg-5 text-center">
+            <div class="p-4 pt-5 border bg-light">
+              <h5>Income</h5>
+              <label for="">Income</label>
+              <input type="text">
+              <br><br>
+              <h5>Expenses</h5>                
+              <label for="">Food</label>
+              <input type="text">
+              <br><br>
+              <label for="">Rent</label>
+              <input type="text">
+              <br><br>
+              <label for="">Clothes</label>
+              <input type="text">
+              <br><br>
+              <button id="calc-btn">Calculate</button>
+              <br><br>
+              <h5>Total Expenses:</h5>
+              <h5>Balance</h5>
+              <label for="">Save</label>
+              <input type="text">
+              <span>%</span>
+              <button id="save-btn">Save</button>
+              <br><br>
+              <h5>Saving Amount:</h5>
+              <h5>Remaining Balance:</h5></div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- Bootstrap script  -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- javascript link  -->
+
 </body>
 </html>
