--- a/index.html
+++ b/index.html
@@ -31,29 +31,29 @@
             <div class="p-4 pt-5 border bg-light">
               <h5>Income</h5>
               <label for="">Income</label>
-              <input id="income-input" type="text">
+              <input id="income-input" placeholder="$" type="text">
               <br><br>
               <h5>Expenses</h5>                
               <label for="">Food</label>
-              <input id="food-input" type="text">
+              <input id="food-input" placeholder="$" type="text">
               <br><br>
               <label for="">Rent</label>
-              <input id="rent-input" type="text">
+              <input id="rent-input" placeholder="$" type="text">
               <br><br>
               <label for="">Clothes</label>
-              <input id="clothes-input" type="text">
+              <input id="clothes-input" placeholder="$" type="text">
               <br><br>
               <button id="calculation-button">Calculate</button>
               <br><br>
-              <h5>Total Expenses:$<span id="expenses-total"></span></h5>
-              <h5>Balance:</h5>
+              <h5>Total Expenses:$<span id="expenses-total">00</span></h5>
+              <h5>Balance:$<span id="balance"></span></h5>
               <label for="">Save</label>
-              <input type="text">
+              <input type="text" placeholder="$">
               <span>%</span>
               <button id="savings-button">Save</button>
               <br><br>
-              <h5>Saving Amount:</h5>
-              <h5>Remaining Balance:</h5></div>
+              <h5>Saving Amount:$<span id="saving-amount"></span></h5>
+              <h5>Remaining Balance:$<span id="remaining-balance"></span></h5></div>
           </div>
         </div>
       </div>
